Fix loading .properties file